--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Accelerometer Data</h1>
     <div id="accelerometerData">
-        <p>X: <span id="xValue">-</span></p>
-        <p>Y: <span id="yValue">-</span></p>
-        <p>Z: <span id="zValue">-</span></p>
+        <p>X: <span id="xValue">Loading...</span></p>
+        <p>Y: <span id="yValue">Loading...</span></p>
+        <p>Z: <span id="zValue">Loading...</span></p>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
