--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
     <script>// Function to update accelerometer data
         const updateAccelerometerData = () => {
             // Make an AJAX request to fetch accelerometer data
-            $.get('/api/accelerometer', (data) => {
-                // Update the X, Y, and Z values in the HTML
-                $('#xValue').text(data.x);
-                $('#yValue').text(data.y);
-                $('#zValue').text(data.z);
+            $.get('/api/accelerometer')
+                .done((data) => {
+                    // Update the X, Y, and Z values in the HTML
+                    $('#xValue').text(data.x);
+                    $('#yValue').text(data.y);
+                    $('#zValue').text(data.z);
 
-                // Schedule the next update after a delay (e.g., 2 seconds)
-                setTimeout(updateAccelerometerData, 2000);
-            }).fail((error) => {
-                console.error('Error fetching accelerometer data:', error);
+                    // Schedule the next update after a delay (e.g., 2 seconds)
+                    setTimeout(updateAccelerometerData, 2000);
+                })
+                .fail((xhr, status, error) => {
+                    // Log the detailed error information
+                    console.error('Error fetching accelerometer data:', xhr, status, error);
 
-                // Handle errors and schedule the next update
-                setTimeout(updateAccelerometerData, 2000);
-            });
+                    // Handle errors and schedule the next update
+                    setTimeout(updateAccelerometerData, 2000);
+                });
         };
 
         // Initial update
