--- a/index.html
+++ b/index.html
@@ -8,35 +8,59 @@
 <body>
     <h1>Accelerometer Data</h1>
     <div id="accelerometerData">
-        <p>X: <span id="xValue">Loading...</span></p>
-        <p>Y: <span id="yValue">Loading...</span></p>
-        <p>Z: <span id="zValue">Loading...</span></p>
+        <p>X: <span id="xValue">-</span></p>
+        <p>Y: <span id="yValue">-</span></p>
+        <p>Z: <span id="zValue">-</span></p>
     </div>
 
+    <button id="toggleFetching">Start Fetching Data</button>
+
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script>// Function to update accelerometer data
+    <script>// Variable to track whether data fetching is started
+        let isFetchingStarted = false;
+
+        // Function to update accelerometer data
         const updateAccelerometerData = () => {
-            // Make an AJAX request to fetch accelerometer data
-            $.get('/api/accelerometer')
-                .done((data) => {
-                    // Update the X, Y, and Z values in the HTML
-                    $('#xValue').text(data.x);
-                    $('#yValue').text(data.y);
-                    $('#zValue').text(data.z);
+            // Check if data fetching is started
+            if (isFetchingStarted) {
+                // Make an AJAX request to fetch accelerometer data using HTTPS
+                $.ajax({
+                    url: 'https://your-server-domain/api/accelerometer',  // Replace with your server domain
+                    method: 'GET',
+                    dataType: 'json',
+                    success: (data) => {
+                        // Update the X, Y, and Z values in the HTML
+                        $('#xValue').text(data.x);
+                        $('#yValue').text(data.y);
+                        $('#zValue').text(data.z);
 
-                    // Schedule the next update after a delay (e.g., 2 seconds)
-                    setTimeout(updateAccelerometerData, 2000);
-                })
-                .fail((xhr, status, error) => {
-                    // Log the detailed error information
-                    console.error('Error fetching accelerometer data:', xhr, status, error);
+                        // Schedule the next update after a delay (e.g., 2 seconds)
+                        setTimeout(updateAccelerometerData, 2000);
+                    },
+                    error: (xhr, status, error) => {
+                        // Log the detailed error information
+                        console.error('Error fetching accelerometer data:', xhr, status, error);
 
-                    // Handle errors and schedule the next update
-                    setTimeout(updateAccelerometerData, 2000);
+                        // Handle errors and schedule the next update
+                        setTimeout(updateAccelerometerData, 2000);
+                    }
                 });
+            }
         };
 
-        // Initial update
-        updateAccelerometerData();</script>
+        // Event handler for the button click
+        $('#toggleFetching').click(() => {
+            // Toggle the flag to start or stop data fetching
+            isFetchingStarted = !isFetchingStarted;
+
+            // Update the button label based on the current state
+            const buttonLabel = isFetchingStarted ? 'Stop Fetching Data' : 'Start Fetching Data';
+            $('#toggleFetching').text(buttonLabel);
+
+            // If fetching is started, initiate the data fetching
+            if (isFetchingStarted) {
+                updateAccelerometerData();
+            }
+        });</script>
 </body>
 </html>
