updated API URL

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             if (isFetchingStarted) {
                 // Make an AJAX request to fetch accelerometer data using HTTPS
                 $.ajax({
-                    url: 'https://your-server-domain/api/accelerometer',  // Replace with your server domain
+                    url: 'https://adttowebapp.azurewebsites.net/api/accelerometer',  // Replace with your server domain
                     method: 'GET',
                     dataType: 'json',
                     success: (data) => {
