--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                         $('#xValue').text(data.x);
                         $('#yValue').text(data.y);
                         $('#zValue').text(data.z);
-                        setTimeout(updateAccelerometerData, 2000);
+                        // Update every 2s (2000) or 0.2 (200)
+                        setTimeout(updateAccelerometerData, 200);
                     },
                     error: (xhr, status, error) => {
                         console.error('Error fetching accelerometer data:', xhr, status, error);
-                        setTimeout(updateAccelerometerData, 2000);
+                        setTimeout(updateAccelerometerData, 200);
                     }
                 });
             }
