--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accelerometer Data App</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.12.0/chart.min.js"></script>
     <style>
         body {
             margin: 0;
@@ -103,12 +103,12 @@
                     // Update the chart
                     updateChart(data);
 
-                    // Continue fetching every 0.2 seconds
-                    setTimeout(updateAccelerometerData, 200);
+                    // Continue fetching every 2 seconds
+                    setTimeout(updateAccelerometerData, 2000);
                 },
                 error: (xhr, status, error) => {
                     console.error('Error fetching accelerometer data:', xhr, status, error);
-                    setTimeout(updateAccelerometerData, 200);
+                    setTimeout(updateAccelerometerData, 2000);
                 }
             });
         };
