--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accelerometer Data App</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        svg {
-            display: block;
-            margin-top: 20px;
-            margin-left: 50px;
-        }
-
-        #dataSection {
-            margin-left: 20px;
-        }
-    </style>
 </head>
-
 <body>
     <h1>Accelerometer Data</h1>
-    <div id="accelerometerData" id="dataSection">
+    <div id="accelerometerData">
         <p>X: <span id="xValue">-</span></p>
         <p>Y: <span id="yValue">-</span></p>
         <p>Z: <span id="zValue">-</span></p>
@@ -35,76 +15,30 @@
 
     <button id="toggleFetching">Start Fetching Data</button>
 
-    <!-- Add an SVG element for the chart -->
-    <svg id="accelerometerChart" width="800" height="400"></svg>
-
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>let isFetchingStarted = false;
 
-        // Initialize D3.js variables
-        const svg = d3.select("#accelerometerChart");
-        const margin = { top: 20, right: 20, bottom: 30, left: 50 };
-        const width = +svg.attr("width") - margin.left - margin.right;
-        const height = +svg.attr("height") - margin.top - margin.bottom;
-
-        const g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-        const x = d3.scaleTime().range([0, width]);
-        const y = d3.scaleLinear().range([height, 0]);
-
-        const lineX = d3.line().x(d => x(new Date(d.time))).y(d => y(d.x));
-        const lineY = d3.line().x(d => x(new Date(d.time))).y(d => y(d.y));
-        const lineZ = d3.line().x(d => x(new Date(d.time))).y(d => y(d.z));
-
-        // Function to update chart data
-        const updateChart = (data) => {
-            // Check if data is an array and has valid elements
-            if (!Array.isArray(data) || data.length === 0 || isNaN(data[0].x) || isNaN(data[0].y) || isNaN(data[0].z) || isNaN(new Date(data[0].time))) {
-                console.error('Invalid data for chart:', data);
-                return;
-            }
-
-            // Your existing logic to update HTML elements
-
-            // Update the chart
-            x.domain(d3.extent(data, d => new Date(d.time)));
-            y.domain([-10, 10]);
-
-            g.selectAll(".lineX").remove();
-            g.selectAll(".lineY").remove();
-            g.selectAll(".lineZ").remove();
-
-            g.append("path").data([data]).attr("class", "lineX").style("stroke", "steelblue").attr("d", lineX);
-            g.append("path").data([data]).attr("class", "lineY").style("stroke", "green").attr("d", lineY);
-            g.append("path").data([data]).attr("class", "lineZ").style("stroke", "red").attr("d", lineZ);
-        };
-
-
-        // Function to fetch accelerometer data and update both the HTML and chart
         const updateAccelerometerData = () => {
-            $.ajax({
-                url: '/api/accelerometer',
-                method: 'GET',
-                dataType: 'json',
-                success: (data) => {
-                    // Update HTML elements
-                    $('#xValue').text(data.x);
-                    $('#yValue').text(data.y);
-                    $('#zValue').text(data.z);
-
-                    // Update the chart
-                    updateChart([data]); // Assuming the data is a single data point
-
-                    // Continue fetching every 2 seconds
-                    setTimeout(updateAccelerometerData, 2000);
-                },
-                error: (xhr, status, error) => {
-                    console.error('Error fetching accelerometer data:', xhr, status, error);
-                    setTimeout(updateAccelerometerData, 2000);
-                }
-            });
+            if (isFetchingStarted) {
+                $.ajax({
+                    url: '/api/accelerometer',
+                    method: 'GET',
+                    dataType: 'json',
+                    success: (data) => {
+                        $('#xValue').text(data.x);
+                        $('#yValue').text(data.y);
+                        $('#zValue').text(data.z);
+                        // Update every 2s (2000) or 0.2 (200)
+                        setTimeout(updateAccelerometerData, 200);
+                    },
+                    error: (xhr, status, error) => {
+                        console.error('Error fetching accelerometer data:', xhr, status, error);
+                        setTimeout(updateAccelerometerData, 200);
+                    }
+                });
+            }
         };
 
-        // Toggle fetching data
         $('#toggleFetching').click(() => {
             isFetchingStarted = !isFetchingStarted;
             const buttonLabel = isFetchingStarted ? 'Stop Fetching Data' : 'Start Fetching Data';
@@ -115,5 +49,4 @@
             }
         });</script>
 </body>
-
 </html>
