added charts for debugging

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accelerometer Data App</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <h1>Accelerometer Data</h1>
@@ -15,7 +17,9 @@
 
     <button id="toggleFetching">Start Fetching Data</button>
 
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Add a canvas element for the chart -->
+    <canvas id="accelerometerChart" width="800" height="400"></canvas>
+
     <script>let isFetchingStarted = false;
 
         const updateAccelerometerData = () => {
@@ -28,6 +32,7 @@
                         $('#xValue').text(data.x);
                         $('#yValue').text(data.y);
                         $('#zValue').text(data.z);
+
                         // Update every 2s (2000) or 0.2 (200)
                         setTimeout(updateAccelerometerData, 200);
                     },
@@ -38,6 +43,47 @@
                 });
             }
         };
+
+        // Initialize Chart.js
+        const ctx = document.getElementById('accelerometerChart').getContext('2d');
+        const accelerometerChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [],
+                datasets: [
+                    {
+                        label: 'X',
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        data: [],
+                    },
+                    {
+                        label: 'Y',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        data: [],
+                    },
+                    {
+                        label: 'Z',
+                        borderColor: 'rgba(255, 206, 86, 1)',
+                        data: [],
+                    },
+                ],
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom',
+                    },
+                    y: {
+                        type: 'linear',
+                        position: 'left',
+                        min: -10,
+                        max: 10,
+                    },
+                },
+            },
+        });
 
         $('#toggleFetching').click(() => {
             isFetchingStarted = !isFetchingStarted;
