--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accelerometer Data App</title>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-
 <body>
     <h1>Accelerometer Data</h1>
     <div id="accelerometerData">
@@ -19,104 +15,27 @@
 
     <button id="toggleFetching">Start Fetching Data</button>
 
-    <!-- Add a canvas element for the chart -->
-    <canvas id="accelerometerChart" width="800" height="400"></canvas>
-
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>let isFetchingStarted = false;
-
-        // Initialize Chart.js
-        const ctx = document.getElementById('accelerometerChart').getContext('2d');
-        const accelerometerChart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: [],
-                datasets: [
-                    {
-                        label: 'X',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        data: [],
-                    },
-                    {
-                        label: 'Y',
-                        borderColor: 'rgba(54, 162, 235, 1)',
-                        data: [],
-                    },
-                    {
-                        label: 'Z',
-                        borderColor: 'rgba(255, 206, 86, 1)',
-                        data: [],
-                    },
-                ],
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    x: {
-                        type: 'linear',
-                        position: 'bottom',
-                    },
-                    y: {
-                        type: 'linear',
-                        position: 'left',
-                        min: -10,
-                        max: 10,
-                    },
-                },
-            },
-        });
-
-        // Update the WebSocket URL
-        const ws = new WebSocket('wss://adttowebapp.azurewebsites.net/');
-
-        ws.addEventListener('open', (event) => {
-            console.log('WebSocket connection opened:', event);
-
-            // Implement any additional logic when the WebSocket connection opens
-        });
-
-        ws.addEventListener('message', (event) => {
-            // Handle incoming WebSocket messages (accelerometer data)
-            const data = JSON.parse(event.data);
-
-            // Update your UI or chart with the received accelerometer data
-            $('#xValue').text(data.x);
-            $('#yValue').text(data.y);
-            $('#zValue').text(data.z);
-
-            // Update the chart
-            const time = new Date().toLocaleTimeString();
-            accelerometerChart.data.labels.push(time);
-            accelerometerChart.data.datasets[0].data.push(data.x);
-            accelerometerChart.data.datasets[1].data.push(data.y);
-            accelerometerChart.data.datasets[2].data.push(data.z);
-
-            // Limit the number of data points shown to keep it lightweight
-            const maxDataPoints = 10;
-            while (accelerometerChart.data.labels.length > maxDataPoints) {
-                accelerometerChart.data.labels.shift();
-                accelerometerChart.data.datasets[0].data.shift();
-                accelerometerChart.data.datasets[1].data.shift();
-                accelerometerChart.data.datasets[2].data.shift();
-            }
-
-            // Update the chart
-            accelerometerChart.update();
-        });
-
-        ws.addEventListener('close', (event) => {
-            console.log('WebSocket connection closed:', event);
-
-            // Implement any additional logic when the WebSocket connection closes
-        });
-
-        // Handle potential errors
-        ws.addEventListener('error', (error) => {
-            console.error('WebSocket error:', error);
-        });
 
         const updateAccelerometerData = () => {
             if (isFetchingStarted) {
-                // No need for AJAX anymore, as WebSocket will handle real-time updates
+                $.ajax({
+                    url: '/api/accelerometer',
+                    method: 'GET',
+                    dataType: 'json',
+                    success: (data) => {
+                        $('#xValue').text(data.x);
+                        $('#yValue').text(data.y);
+                        $('#zValue').text(data.z);
+                        // Update every 2s (2000) or 0.2 (200)
+                        setTimeout(updateAccelerometerData, 200);
+                    },
+                    error: (xhr, status, error) => {
+                        console.error('Error fetching accelerometer data:', xhr, status, error);
+                        setTimeout(updateAccelerometerData, 200);
+                    }
+                });
             }
         };
 
@@ -130,5 +49,4 @@
             }
         });</script>
 </body>
-
 </html>
